# ETW-Samples

./: .gitmodules  CMakeLists.txt  README.md
samples/cpu_monitor/: CMakeLists.txt
samples/enumerate_provider/: CMakeLists.txt
samples/enumerate_provider/src/: enumerate_provider.cpp
samples/etw_consumer/: CMakeLists.txt
samples/etw_consumer/src/: etw_consumer.cpp
samples/logman/: CMakeLists.txt
samples/logman/src/: logman.cpp
samples/retrieve_metadata/: CMakeLists.txt
samples/retrieve_metadata/src/: retrieve_metadata.cpp
src/: ETW_Consumer.cpp  ETW_Consumer.h  ETW_Controller.cpp  ETW_Controller.h  ETW_Provider.cpp  ETW_Provider.h  ETW_Session.cpp  ETW_Session.h  ETW_Utils.cpp  ETW_Utils.h  Main.cpp
